Quick start character creation

--- a/public/404.html
+++ b/public/404.html
@@ -91,6 +91,7 @@
 <li class=" has-sub-menu"><a href="http://localhost:1313/character-creation/">Character Creation<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
+<li class=""><a href="http://localhost:1313/character-creation/quick-start/">Quick Start</a></li>
 <li class=""><a href="http://localhost:1313/character-creation/races/">Races</a></li>
 </ul>
   
