--- a/public/character-creation/index.html
+++ b/public/character-creation/index.html
@@ -19,23 +19,26 @@
 <meta property="og:url" content="http://localhost:1313/character-creation/">
   <meta property="og:site_name" content="The Shattered Lands of Tu&#39;um  Mundi">
   <meta property="og:title" content="Character Creation">
-  <meta property="og:description" content="DM! DM! I want a gun!!!
-And you shall have it, just talk to me because there’s some specific lore about firearms that becomes important While you make your characters and backstory, please keep these notes in mind.
-In general, the world is entering a time period similar to that of the victorian era. Basic self-propelled engines, steam/coal power, firearms. Think early 1800s.">
+  <meta property="og:description" content="DM! DM! I really don’t want to read thousands of words of lore just to make a level one character
+Well you’re in luck, just go to the Quick Start page and read that, everything else is specifics that don’t matter.
+DM! DM! I want a gun!!!
+And you shall have it, just talk to me because there’s some specific lore about firearms that becomes important While you make your characters and backstory, please keep these notes in mind.">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="website">
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Character Creation">
-  <meta name="twitter:description" content="DM! DM! I want a gun!!!
-And you shall have it, just talk to me because there’s some specific lore about firearms that becomes important While you make your characters and backstory, please keep these notes in mind.
-In general, the world is entering a time period similar to that of the victorian era. Basic self-propelled engines, steam/coal power, firearms. Think early 1800s.">
+  <meta name="twitter:description" content="DM! DM! I really don’t want to read thousands of words of lore just to make a level one character
+Well you’re in luck, just go to the Quick Start page and read that, everything else is specifics that don’t matter.
+DM! DM! I want a gun!!!
+And you shall have it, just talk to me because there’s some specific lore about firearms that becomes important While you make your characters and backstory, please keep these notes in mind.">
 
   <meta itemprop="name" content="Character Creation">
-  <meta itemprop="description" content="DM! DM! I want a gun!!!
-And you shall have it, just talk to me because there’s some specific lore about firearms that becomes important While you make your characters and backstory, please keep these notes in mind.
-In general, the world is entering a time period similar to that of the victorian era. Basic self-propelled engines, steam/coal power, firearms. Think early 1800s.">
-  <meta itemprop="wordCount" content="63"></head>
+  <meta itemprop="description" content="DM! DM! I really don’t want to read thousands of words of lore just to make a level one character
+Well you’re in luck, just go to the Quick Start page and read that, everything else is specifics that don’t matter.
+DM! DM! I want a gun!!!
+And you shall have it, just talk to me because there’s some specific lore about firearms that becomes important While you make your characters and backstory, please keep these notes in mind.">
+  <meta itemprop="wordCount" content="104"></head>
 <body>
 
 <div class="container"><header>
@@ -52,6 +55,10 @@ In general, the world is entering a time period similar to that of the victorian
 
 <div class="content-container">
 <main><h1>Character Creation</h1><blockquote>
+<p>DM! DM! I really don&rsquo;t want to read thousands of words of lore just to make a level one character</p></blockquote>
+<blockquote>
+<p>Well you&rsquo;re in luck, just go to the Quick Start page and read that, everything else is specifics that don&rsquo;t matter.</p></blockquote>
+<blockquote>
 <p>DM! DM! I want a gun!!!</p></blockquote>
 <blockquote>
 <p>And you shall have it, just talk to me because there&rsquo;s some specific lore about firearms that becomes important
@@ -62,7 +69,7 @@ While you make your characters and backstory, please keep these notes in mind.</
 <div class="edit-meta">
 
 <br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/Character%20Creation%5c_index.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="http://localhost:1313/faith/organized/" title="Organized Faiths"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - Organized Faiths</a>
-<a class="nav nav-next" href="http://localhost:1313/character-creation/races/" title="Races">Next - Races <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
+<a class="nav nav-next" href="http://localhost:1313/character-creation/quick-start/" title="Quick Start">Next - Quick Start <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 </nav><footer><p class="powered">Powered by <a href="https://gohugo.io">Hugo</a>. Theme by <a href="https://themes.gohugo.io/hugo-theme-techdoc/">TechDoc</a>. Designed by <a href="https://github.com/thingsym/hugo-theme-techdoc">Thingsym</a>.</p>
 </footer>
 </main>
@@ -113,6 +120,7 @@ While you make your characters and backstory, please keep these notes in mind.</
 <li class=" active has-sub-menu"><a href="http://localhost:1313/character-creation/">Character Creation<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
+<li class=""><a href="http://localhost:1313/character-creation/quick-start/">Quick Start</a></li>
 <li class=""><a href="http://localhost:1313/character-creation/races/">Races</a></li>
 </ul>
   
