--- a/public/History/index.html
+++ b/public/History/index.html
@@ -38,7 +38,7 @@ The First Era - Rule of the Dragon Gods ~20,000 Years Not much is know about thi
 Perhaps, anyone who has recieved formal higher education likely knows the basics of these, and if you haven’t you likely know of it from stories passed down from your family
 The History of Tu’um Mundi is split into five ages, each one marked by new technology, magic, rulers, discoveriies, and more.
 The First Era - Rule of the Dragon Gods ~20,000 Years Not much is know about this time. Humanity was little more than wandering tribes, barely speaking or writing, and Dragonic Gods ruled. The most powerful of the dragons foresaw their destruction, and in an effort to save themselves, they created the 10 Crowns. But these were not enough, in spite of the power of the Crowns, the great Draconic Gods perished. In their absence, their great works fell to ruin, monsters that had been pray became predator, and humanity gained a chance to step out from under their shadow.">
-  <meta itemprop="wordCount" content="515"></head>
+  <meta itemprop="wordCount" content="536"></head>
 <body>
 
 <div class="container"><header>
@@ -74,10 +74,10 @@ As the people of the world learn about the source of his power, more of them beg
 Kingdoms begin to pop up over the world, each headed by a powerful Dragon with a Crown. It is a time of great prosperity, of peace, for most.</p>
 <h2 id="the-fourth-era---war">The Fourth Era - War</h2>
 <h4 id="200-years">(200 Years)</h4>
-<p>The Dragons begin to understand what sort of power they wield and what their contemporaries wield. Small wars at first, but eventually, every single nation has some sort of war going with some other nation. One of them rises above the others, the Dragon gets three Crowns, an unprecedented number, and begins beating all the other nations. <a href="The%20Tricorn%20King">The Tricorn King</a> The rest all team up to fight this new tyrant, and in a final battle, the world shatters and the crowns are lost, spread to the four winds. The only surviving Dragon is Thela, the Bright Queen.</p>
+<p>The Dragons begin to understand what sort of power they wield and what their contemporaries wield. Small wars at first, but eventually, every single nation has some sort of war going with some other nation. One of them rises above the others, the Dragon gets three Crowns, an unprecedented number, and begins beating all the other nations. The Tricorn King. The rest all team up to fight this new tyrant, and in a final battle, the world shatters and the crowns are lost, spread to the four winds. The only surviving Dragon is Thela, the Bright Queen.</p>
 <h2 id="the-fifth-era---the-shattered-world">The Fifth Era - The Shattered World</h2>
 <h4 id="1000-years">(1,000 Years)</h4>
-<p>The current age. <!-- The world is chaos, Crowns switch heads in less than 10 years on average. Nations have barely enough time to form before they are ripped apart by civil war again. But the people are ambitious. In the cultural consciousness they remember the world before the shattering, and the people are ready to fight. --></p>
+<p>The current age. In the shattering of the last age, humanity has been reset, and now fights to survive again in this new age. <!-- The world is chaos, Crowns switch heads in less than 10 years on average. Nations have barely enough time to form before they are ripped apart by civil war again. But the people are ambitious. In the cultural consciousness they remember the world before the shattering, and the people are ready to fight. --></p>
 <div class="edit-meta">
 
 <br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/History%5c_index.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="http://localhost:1313/nations/free-peoples/twin-cities/" title="Twin Cities"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - Twin Cities</a>
@@ -132,6 +132,7 @@ Kingdoms begin to pop up over the world, each headed by a powerful Dragon with a
 <li class=" has-sub-menu"><a href="http://localhost:1313/character-creation/">Character Creation<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
+<li class=""><a href="http://localhost:1313/character-creation/quick-start/">Quick Start</a></li>
 <li class=""><a href="http://localhost:1313/character-creation/races/">Races</a></li>
 </ul>
   
