--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@ The world is covered in the ruins of an empire of the old age, brought low by th
   <meta itemprop="name" content="Home">
   <meta itemprop="description" content="Welcome to Tu’um Mundi Tu’um Mundi is a world twice shattered, standing in between the old age and the new. Powerful individuals rule over countries as God-Kings, wearing the ancient all-powerful Crowns, having stolen the title of “Dragons” from the ancient beasts that made them. In the empty space between them, people live in city-states and sovereign villages.
 The world is covered in the ruins of an empire of the old age, brought low by the war of the last shattering. The war left the land scarred, the edges of the land now disappear into nothingness, an impassable void, and the grave of the old empire’s capital sit in the center. Adventurers spend entire lifetimes exploring these ruins, looking for fame and fortune, and often finding only injury or death.">
-  <meta itemprop="wordCount" content="240"></head>
+  <meta itemprop="wordCount" content="235"></head>
 <body>
 
 <div class="container"><header>
@@ -54,7 +54,7 @@ The world is covered in the ruins of an empire of the old age, brought low by th
 <p>This is world, a story, about Power, about Violence, and having the Will to change the world</p>
 <hr>
 <h3 id="themes">Themes</h3>
-<p>The Goal of this campaign is to be about Power, in all its shapes, good and bad. I intend for you to become the rulers of a people and grow your influence throughout the campaign - to what end? I leave that to you.</p>
+<p>This campaign is about Power, in all its shapes, good and bad. I intend for you to become the rulers of a people and grow your influence throughout the campaign - to what end? I leave that to you.</p>
 <p>The campaign is meant to be heavily driven by your goals and actions. Sandbox-ish. To this, I promise that wherever you go, I will give you adventure, but I ask that you meet the work I put into making this campaign by being active participants in the world.</p>
 <div class="edit-meta">
 
@@ -108,6 +108,7 @@ The world is covered in the ruins of an empire of the old age, brought low by th
 <li class=" has-sub-menu"><a href="http://localhost:1313/character-creation/">Character Creation<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
+<li class=""><a href="http://localhost:1313/character-creation/quick-start/">Quick Start</a></li>
 <li class=""><a href="http://localhost:1313/character-creation/races/">Races</a></li>
 </ul>
   
