--- a/public/History/index.html
+++ b/public/History/index.html
@@ -80,7 +80,7 @@ Kingdoms begin to pop up over the world, each headed by a powerful Dragon with a
 <p>The current age. In the shattering of the last age, humanity has been reset, and now fights to survive again in this new age. <!-- The world is chaos, Crowns switch heads in less than 10 years on average. Nations have barely enough time to form before they are ripped apart by civil war again. But the people are ambitious. In the cultural consciousness they remember the world before the shattering, and the people are ready to fight. --></p>
 <div class="edit-meta">
 
-<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/History%5c_index.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="http://localhost:1313/nations/free-peoples/twin-cities/" title="Twin Cities"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - Twin Cities</a>
+<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/History%5c_index.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="http://localhost:1313/geography/grave/" title="Grave"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - Grave</a>
 <a class="nav nav-next" href="http://localhost:1313/faith/" title="Faith">Next - Faith <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 </nav><footer><p class="powered">Powered by <a href="https://gohugo.io">Hugo</a>. Theme by <a href="https://themes.gohugo.io/hugo-theme-techdoc/">TechDoc</a>. Designed by <a href="https://github.com/thingsym/hugo-theme-techdoc">Thingsym</a>.</p>
 </footer>
@@ -91,28 +91,32 @@ Kingdoms begin to pop up over the world, each headed by a powerful Dragon with a
 <ul>
 <li class=""><a href="http://localhost:1313/">Home</a></li>
 
-<li class=" has-sub-menu"><a href="http://localhost:1313/nations/">Nations<span class="mark closed">+</span></a>
+<li class=" has-sub-menu"><a href="http://localhost:1313/geography/">Geography<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
 
-<li class=" has-sub-menu"><a href="http://localhost:1313/nations/dragons/">Dragons<span class="mark closed">+</span></a>
+<li class=" has-sub-menu"><a href="http://localhost:1313/geography/dragons/">Dragon&#39;s Land<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
-<li class=""><a href="http://localhost:1313/nations/dragons/bright-queen/">Bright Queen Thela</a></li>
-<li class=""><a href="http://localhost:1313/nations/dragons/witch-king/">The Witch King</a></li>
+<li class=""><a href="http://localhost:1313/geography/dragons/centra/">Centra</a></li>
+<li class=""><a href="http://localhost:1313/geography/dragons/mithral/">Mithral</a></li>
+<li class=""><a href="http://localhost:1313/geography/dragons/sola/">Sola</a></li>
+<li class=""><a href="http://localhost:1313/geography/dragons/thel/">Thel</a></li>
 </ul>
   
 </li>
 
-<li class=" has-sub-menu"><a href="http://localhost:1313/nations/free-peoples/">Free Peoples<span class="mark closed">+</span></a>
+<li class=" has-sub-menu"><a href="http://localhost:1313/geography/free-peoples/">Free Peoples<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
-<li class=""><a href="http://localhost:1313/nations/free-peoples/dizazhra/">Dizazhra Mountain People</a></li>
-<li class=""><a href="http://localhost:1313/nations/free-peoples/storm-riders/">Storm Riders</a></li>
-<li class=""><a href="http://localhost:1313/nations/free-peoples/twin-cities/">Twin Cities</a></li>
+<li class=""><a href="http://localhost:1313/geography/free-peoples/dizazhra/">Dizazhra Mountain People</a></li>
+<li class=""><a href="http://localhost:1313/geography/free-peoples/storm-riders/">Storm Riders</a></li>
+<li class=""><a href="http://localhost:1313/geography/free-peoples/library/">The Great Library</a></li>
+<li class=""><a href="http://localhost:1313/geography/free-peoples/twin-cities/">Twin Cities</a></li>
 </ul>
   
 </li>
+<li class=""><a href="http://localhost:1313/geography/grave/">Grave</a></li>
 </ul>
   
 </li>
@@ -125,6 +129,7 @@ Kingdoms begin to pop up over the world, each headed by a powerful Dragon with a
   
 <ul class="sub-menu">
 <li class=""><a href="http://localhost:1313/faith/organized/">Organized Faiths</a></li>
+<li class=""><a href="http://localhost:1313/faith/votw/">The Voice of the World</a></li>
 </ul>
   
 </li>
