--- a/public/character-creation/quick-start/index.html
+++ b/public/character-creation/quick-start/index.html
@@ -77,28 +77,32 @@ Nations The world is divided between 7 nations led by god-kings who possess extr
 <ul>
 <li class=""><a href="http://localhost:1313/">Home</a></li>
 
-<li class=" has-sub-menu"><a href="http://localhost:1313/nations/">Nations<span class="mark closed">+</span></a>
+<li class=" has-sub-menu"><a href="http://localhost:1313/geography/">Geography<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
 
-<li class=" has-sub-menu"><a href="http://localhost:1313/nations/dragons/">Dragons<span class="mark closed">+</span></a>
+<li class=" has-sub-menu"><a href="http://localhost:1313/geography/dragons/">Dragon&#39;s Land<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
-<li class=""><a href="http://localhost:1313/nations/dragons/bright-queen/">Bright Queen Thela</a></li>
-<li class=""><a href="http://localhost:1313/nations/dragons/witch-king/">The Witch King</a></li>
+<li class=""><a href="http://localhost:1313/geography/dragons/centra/">Centra</a></li>
+<li class=""><a href="http://localhost:1313/geography/dragons/mithral/">Mithral</a></li>
+<li class=""><a href="http://localhost:1313/geography/dragons/sola/">Sola</a></li>
+<li class=""><a href="http://localhost:1313/geography/dragons/thel/">Thel</a></li>
 </ul>
   
 </li>
 
-<li class=" has-sub-menu"><a href="http://localhost:1313/nations/free-peoples/">Free Peoples<span class="mark closed">+</span></a>
+<li class=" has-sub-menu"><a href="http://localhost:1313/geography/free-peoples/">Free Peoples<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
-<li class=""><a href="http://localhost:1313/nations/free-peoples/dizazhra/">Dizazhra Mountain People</a></li>
-<li class=""><a href="http://localhost:1313/nations/free-peoples/storm-riders/">Storm Riders</a></li>
-<li class=""><a href="http://localhost:1313/nations/free-peoples/twin-cities/">Twin Cities</a></li>
+<li class=""><a href="http://localhost:1313/geography/free-peoples/dizazhra/">Dizazhra Mountain People</a></li>
+<li class=""><a href="http://localhost:1313/geography/free-peoples/storm-riders/">Storm Riders</a></li>
+<li class=""><a href="http://localhost:1313/geography/free-peoples/library/">The Great Library</a></li>
+<li class=""><a href="http://localhost:1313/geography/free-peoples/twin-cities/">Twin Cities</a></li>
 </ul>
   
 </li>
+<li class=""><a href="http://localhost:1313/geography/grave/">Grave</a></li>
 </ul>
   
 </li>
@@ -111,6 +115,7 @@ Nations The world is divided between 7 nations led by god-kings who possess extr
   
 <ul class="sub-menu">
 <li class=""><a href="http://localhost:1313/faith/organized/">Organized Faiths</a></li>
+<li class=""><a href="http://localhost:1313/faith/votw/">The Voice of the World</a></li>
 </ul>
   
 </li>
@@ -118,6 +123,8 @@ Nations The world is divided between 7 nations led by god-kings who possess extr
 <li class="parent has-sub-menu"><a href="http://localhost:1313/character-creation/">Character Creation<span class="mark opened">-</span></a>
   
 <ul class="sub-menu">
+<li class="active"><a href="http://localhost:1313/character-creation/quick-start/">Quick Start</a></li>
+<li class=""><a href="http://localhost:1313/character-creation/races/">Races</a></li>
 </ul>
   
 </li>
