--- a/public/faith/index.html
+++ b/public/faith/index.html
@@ -19,17 +19,17 @@
 <meta property="og:url" content="http://localhost:1313/faith/">
   <meta property="og:site_name" content="The Shattered Lands of Tu&#39;um  Mundi">
   <meta property="og:title" content="Faith">
-  <meta property="og:description" content="Religion in Tu’um Mundi is a complicated and varied affair. Their are several large religions, powerful cults, and small villages worshipping their local patron.">
+  <meta property="og:description" content="Religion in Tu’um Mundi is a complicated and varied affair. There are several large religions, powerful cults, and small villages who worshipping their local patron.">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="website">
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Faith">
-  <meta name="twitter:description" content="Religion in Tu’um Mundi is a complicated and varied affair. Their are several large religions, powerful cults, and small villages worshipping their local patron.">
+  <meta name="twitter:description" content="Religion in Tu’um Mundi is a complicated and varied affair. There are several large religions, powerful cults, and small villages who worshipping their local patron.">
 
   <meta itemprop="name" content="Faith">
-  <meta itemprop="description" content="Religion in Tu’um Mundi is a complicated and varied affair. Their are several large religions, powerful cults, and small villages worshipping their local patron.">
-  <meta itemprop="wordCount" content="24"></head>
+  <meta itemprop="description" content="Religion in Tu’um Mundi is a complicated and varied affair. There are several large religions, powerful cults, and small villages who worshipping their local patron.">
+  <meta itemprop="wordCount" content="25"></head>
 <body>
 
 <div class="container"><header>
@@ -45,7 +45,7 @@
 </div>
 
 <div class="content-container">
-<main><h1>Faith</h1><p>Religion in Tu&rsquo;um Mundi is a complicated and varied affair. Their are several large religions, powerful cults, and small villages worshipping their local patron.</p>
+<main><h1>Faith</h1><p>Religion in Tu&rsquo;um Mundi is a complicated and varied affair. There are several large religions, powerful cults, and small villages who worshipping their local patron.</p>
 <div class="edit-meta">
 
 <br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/Faith%5c_index.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="http://localhost:1313/history/" title="History"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - History</a>
@@ -59,28 +59,32 @@
 <ul>
 <li class=""><a href="http://localhost:1313/">Home</a></li>
 
-<li class=" has-sub-menu"><a href="http://localhost:1313/nations/">Nations<span class="mark closed">+</span></a>
+<li class=" has-sub-menu"><a href="http://localhost:1313/geography/">Geography<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
 
-<li class=" has-sub-menu"><a href="http://localhost:1313/nations/dragons/">Dragons<span class="mark closed">+</span></a>
+<li class=" has-sub-menu"><a href="http://localhost:1313/geography/dragons/">Dragon&#39;s Land<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
-<li class=""><a href="http://localhost:1313/nations/dragons/bright-queen/">Bright Queen Thela</a></li>
-<li class=""><a href="http://localhost:1313/nations/dragons/witch-king/">The Witch King</a></li>
+<li class=""><a href="http://localhost:1313/geography/dragons/centra/">Centra</a></li>
+<li class=""><a href="http://localhost:1313/geography/dragons/mithral/">Mithral</a></li>
+<li class=""><a href="http://localhost:1313/geography/dragons/sola/">Sola</a></li>
+<li class=""><a href="http://localhost:1313/geography/dragons/thel/">Thel</a></li>
 </ul>
   
 </li>
 
-<li class=" has-sub-menu"><a href="http://localhost:1313/nations/free-peoples/">Free Peoples<span class="mark closed">+</span></a>
+<li class=" has-sub-menu"><a href="http://localhost:1313/geography/free-peoples/">Free Peoples<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
-<li class=""><a href="http://localhost:1313/nations/free-peoples/dizazhra/">Dizazhra Mountain People</a></li>
-<li class=""><a href="http://localhost:1313/nations/free-peoples/storm-riders/">Storm Riders</a></li>
-<li class=""><a href="http://localhost:1313/nations/free-peoples/twin-cities/">Twin Cities</a></li>
+<li class=""><a href="http://localhost:1313/geography/free-peoples/dizazhra/">Dizazhra Mountain People</a></li>
+<li class=""><a href="http://localhost:1313/geography/free-peoples/storm-riders/">Storm Riders</a></li>
+<li class=""><a href="http://localhost:1313/geography/free-peoples/library/">The Great Library</a></li>
+<li class=""><a href="http://localhost:1313/geography/free-peoples/twin-cities/">Twin Cities</a></li>
 </ul>
   
 </li>
+<li class=""><a href="http://localhost:1313/geography/grave/">Grave</a></li>
 </ul>
   
 </li>
@@ -93,6 +97,7 @@
   
 <ul class="sub-menu">
 <li class=""><a href="http://localhost:1313/faith/organized/">Organized Faiths</a></li>
+<li class=""><a href="http://localhost:1313/faith/votw/">The Voice of the World</a></li>
 </ul>
   
 </li>
@@ -100,6 +105,7 @@
 <li class=" has-sub-menu"><a href="http://localhost:1313/character-creation/">Character Creation<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
+<li class=""><a href="http://localhost:1313/character-creation/quick-start/">Quick Start</a></li>
 <li class=""><a href="http://localhost:1313/character-creation/races/">Races</a></li>
 </ul>
   
