--- a/public/404.html
+++ b/public/404.html
@@ -50,28 +50,32 @@
 <ul>
 <li class=""><a href="http://localhost:1313/">Home</a></li>
 
-<li class=" has-sub-menu"><a href="http://localhost:1313/nations/">Nations<span class="mark closed">+</span></a>
+<li class=" has-sub-menu"><a href="http://localhost:1313/geography/">Geography<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
 
-<li class=" has-sub-menu"><a href="http://localhost:1313/nations/dragons/">Dragons<span class="mark closed">+</span></a>
+<li class=" has-sub-menu"><a href="http://localhost:1313/geography/dragons/">Dragon&#39;s Land<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
-<li class=""><a href="http://localhost:1313/nations/dragons/bright-queen/">Bright Queen Thela</a></li>
-<li class=""><a href="http://localhost:1313/nations/dragons/witch-king/">The Witch King</a></li>
+<li class=""><a href="http://localhost:1313/geography/dragons/centra/">Centra</a></li>
+<li class=""><a href="http://localhost:1313/geography/dragons/mithral/">Mithral</a></li>
+<li class=""><a href="http://localhost:1313/geography/dragons/sola/">Sola</a></li>
+<li class=""><a href="http://localhost:1313/geography/dragons/thel/">Thel</a></li>
 </ul>
   
 </li>
 
-<li class=" has-sub-menu"><a href="http://localhost:1313/nations/free-peoples/">Free Peoples<span class="mark closed">+</span></a>
+<li class=" has-sub-menu"><a href="http://localhost:1313/geography/free-peoples/">Free Peoples<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
-<li class=""><a href="http://localhost:1313/nations/free-peoples/dizazhra/">Dizazhra Mountain People</a></li>
-<li class=""><a href="http://localhost:1313/nations/free-peoples/storm-riders/">Storm Riders</a></li>
-<li class=""><a href="http://localhost:1313/nations/free-peoples/twin-cities/">Twin Cities</a></li>
+<li class=""><a href="http://localhost:1313/geography/free-peoples/dizazhra/">Dizazhra Mountain People</a></li>
+<li class=""><a href="http://localhost:1313/geography/free-peoples/storm-riders/">Storm Riders</a></li>
+<li class=""><a href="http://localhost:1313/geography/free-peoples/library/">The Great Library</a></li>
+<li class=""><a href="http://localhost:1313/geography/free-peoples/twin-cities/">Twin Cities</a></li>
 </ul>
   
 </li>
+<li class=""><a href="http://localhost:1313/geography/grave/">Grave</a></li>
 </ul>
   
 </li>
@@ -83,7 +87,6 @@
 <li class=" has-sub-menu"><a href="http://localhost:1313/faith/">Faith<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
-<li class=""><a href="http://localhost:1313/faith/organized/">Organized Faiths</a></li>
 </ul>
   
 </li>
