--- a/public/faith/organized/index.html
+++ b/public/faith/organized/index.html
@@ -65,7 +65,7 @@ Crown: The second largest faith, they believe those with Crowns are living gods,
 <div class="edit-meta">
 
 <br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/Faith%5corganized.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="http://localhost:1313/faith/" title="Faith"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - Faith</a>
-<a class="nav nav-next" href="http://localhost:1313/character-creation/" title="Character Creation">Next - Character Creation <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
+<a class="nav nav-next" href="http://localhost:1313/faith/votw/" title="The Voice of the World">Next - The Voice of the World <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 </nav><footer><p class="powered">Powered by <a href="https://gohugo.io">Hugo</a>. Theme by <a href="https://themes.gohugo.io/hugo-theme-techdoc/">TechDoc</a>. Designed by <a href="https://github.com/thingsym/hugo-theme-techdoc">Thingsym</a>.</p>
 </footer>
 </main>
@@ -75,28 +75,32 @@ Crown: The second largest faith, they believe those with Crowns are living gods,
 <ul>
 <li class=""><a href="http://localhost:1313/">Home</a></li>
 
-<li class=" has-sub-menu"><a href="http://localhost:1313/nations/">Nations<span class="mark closed">+</span></a>
+<li class=" has-sub-menu"><a href="http://localhost:1313/geography/">Geography<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
 
-<li class=" has-sub-menu"><a href="http://localhost:1313/nations/dragons/">Dragons<span class="mark closed">+</span></a>
+<li class=" has-sub-menu"><a href="http://localhost:1313/geography/dragons/">Dragon&#39;s Land<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
-<li class=""><a href="http://localhost:1313/nations/dragons/bright-queen/">Bright Queen Thela</a></li>
-<li class=""><a href="http://localhost:1313/nations/dragons/witch-king/">The Witch King</a></li>
+<li class=""><a href="http://localhost:1313/geography/dragons/centra/">Centra</a></li>
+<li class=""><a href="http://localhost:1313/geography/dragons/mithral/">Mithral</a></li>
+<li class=""><a href="http://localhost:1313/geography/dragons/sola/">Sola</a></li>
+<li class=""><a href="http://localhost:1313/geography/dragons/thel/">Thel</a></li>
 </ul>
   
 </li>
 
-<li class=" has-sub-menu"><a href="http://localhost:1313/nations/free-peoples/">Free Peoples<span class="mark closed">+</span></a>
+<li class=" has-sub-menu"><a href="http://localhost:1313/geography/free-peoples/">Free Peoples<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
-<li class=""><a href="http://localhost:1313/nations/free-peoples/dizazhra/">Dizazhra Mountain People</a></li>
-<li class=""><a href="http://localhost:1313/nations/free-peoples/storm-riders/">Storm Riders</a></li>
-<li class=""><a href="http://localhost:1313/nations/free-peoples/twin-cities/">Twin Cities</a></li>
+<li class=""><a href="http://localhost:1313/geography/free-peoples/dizazhra/">Dizazhra Mountain People</a></li>
+<li class=""><a href="http://localhost:1313/geography/free-peoples/storm-riders/">Storm Riders</a></li>
+<li class=""><a href="http://localhost:1313/geography/free-peoples/library/">The Great Library</a></li>
+<li class=""><a href="http://localhost:1313/geography/free-peoples/twin-cities/">Twin Cities</a></li>
 </ul>
   
 </li>
+<li class=""><a href="http://localhost:1313/geography/grave/">Grave</a></li>
 </ul>
   
 </li>
@@ -109,6 +113,7 @@ Crown: The second largest faith, they believe those with Crowns are living gods,
   
 <ul class="sub-menu">
 <li class="active"><a href="http://localhost:1313/faith/organized/">Organized Faiths</a></li>
+<li class=""><a href="http://localhost:1313/faith/votw/">The Voice of the World</a></li>
 </ul>
   
 </li>
@@ -116,6 +121,7 @@ Crown: The second largest faith, they believe those with Crowns are living gods,
 <li class=" has-sub-menu"><a href="http://localhost:1313/character-creation/">Character Creation<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
+<li class=""><a href="http://localhost:1313/character-creation/quick-start/">Quick Start</a></li>
 <li class=""><a href="http://localhost:1313/character-creation/races/">Races</a></li>
 </ul>
   
